--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>5.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <name>sh-framework</name>
+    <description>sh-framework</description>
+
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
