--- a/sh-core/pom.xml
+++ b/sh-core/pom.xml
@@ -11,7 +11,6 @@
     </parent>
 
     <artifactId>sh-core</artifactId>
-    <name>sh-core</name>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
@@ -22,32 +21,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-collections4</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
+            <groupId>com.wkclz.framework</groupId>
+            <artifactId>sh-tool</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
