MyBatis 模块基本可用

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>sh-bom</module>
         <module>sh-tool</module>
         <module>sh-core</module>
+        <module>sh-mybatis</module>
     </modules>
 
 </project>
