--- a/sh-bom/pom.xml
+++ b/sh-bom/pom.xml
@@ -28,7 +28,7 @@
         <lombok.version>1.18.42</lombok.version>
 
 
-        <druid-spring-boot-3-starter.version>1.2.27</druid-spring-boot-3-starter.version>
+        <druid-spring-boot-4-starter.version>1.2.28-SNAPSHOT</druid-spring-boot-4-starter.version>
         <mysql-connector-j.version>9.5.0</mysql-connector-j.version>
         <mybatis-spring-boot-starter.version>4.0.0</mybatis-spring-boot-starter.version>
         <pagehelper-spring-boot-starter.version>2.1.1</pagehelper-spring-boot-starter.version>
@@ -76,14 +76,14 @@
 
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid-spring-boot-3-starter</artifactId>
-                <version>${druid-spring-boot-3-starter.version}</version>
+                <artifactId>druid-spring-boot-4-starter</artifactId>
+                <version>${druid-spring-boot-4-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql-connector-j.version}</version>
-                <scope>runtime</scope>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
