demo 可启动，进行模块验证

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>sh-tool</module>
         <module>sh-core</module>
         <module>sh-mybatis</module>
+        <module>sh-demo</module>
     </modules>
 
 </project>
