--- a/sh-demo/src/main/resources/config/application.yml
+++ b/sh-demo/src/main/resources/config/application.yml
@@ -2,20 +2,20 @@ server:
   port: 8080
 
 spring:
+  application:
+      name: sh-demo
+  profiles:
+    active: local
   datasource:
-    url: jdbc:mysql://localhost:3306/sh_demo?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     default-property-inclusion: non_null
 
 mybatis:
   mapper-locations: classpath*:mapper/**/*.xml
-  type-aliases-package: com.wkclz.demo.entity
   configuration:
     map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 分页插件配置
 pagehelper:
@@ -23,10 +23,3 @@ pagehelper:
   reasonable: true
   supportMethodsArguments: true
   params: count=countSql
-
-# druid监控配置
-shrimp:
-  druid:
-    username: admin
-    password: adminPassword
-    reset-enable: true
