--- a/sh-parent/pom.xml
+++ b/sh-parent/pom.xml
@@ -52,6 +52,11 @@
                 <artifactId>sh-mybatis</artifactId>
                 <version>${revision}</version>
             </dependency>
+            <dependency>
+                <groupId>com.wkclz.framework</groupId>
+                <artifactId>sh-redis</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
 
         </dependencies>
