redis 模块优化。增加 web 模块

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>sh-core</module>
         <module>sh-mybatis</module>
         <module>sh-redis</module>
+        <module>sh-web</module>
         <module>sh-demo</module>
     </modules>
 
