--- a/sh-spring/pom.xml
+++ b/sh-spring/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../sh-parent/pom.xml</relativePath>
     </parent>
 
-    <artifactId>sh-web</artifactId>
+    <artifactId>sh-spring</artifactId>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
@@ -21,29 +21,26 @@
     <dependencies>
         <dependency>
             <groupId>com.wkclz.framework</groupId>
-            <artifactId>sh-spring</artifactId>
+            <artifactId>sh-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
         </dependency>
-
-        <!-- 以下两个依赖引入，是为了ErrorHandler 获取异常 -->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <optional>true</optional>
-        </dependency>
-
 
     </dependencies>
 
