动态数据源模块

--- a/sh-parent/pom.xml
+++ b/sh-parent/pom.xml
@@ -54,6 +54,11 @@
             </dependency>
             <dependency>
                 <groupId>com.wkclz.framework</groupId>
+                <artifactId>sh-dynamicdb</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wkclz.framework</groupId>
                 <artifactId>sh-redis</artifactId>
                 <version>${revision}</version>
             </dependency>
